--- a/register/register.css
+++ b/register/register.css
@@ -17,7 +17,7 @@ main {
   width: 100%;
   min-height: 100vh;
   overflow: hidden;
-  background-color: #e0dcdb;
+  background-color: #200f1e;
   padding: 2rem;
   display: flex;
   align-items: center;
@@ -211,7 +211,7 @@ main.sign-up-mode .carousel {
   width: 55%;
   left: 45%;
   top: 0;
-  background-color: #ecac4bee;
+  background-color: #f99e15ee;
   border-radius: 2rem;
   display: grid;
   grid-template-rows: auto 1fr;
