--- a/contact us/contact.css
+++ b/contact us/contact.css
@@ -1,38 +1,71 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap');
 
 * {
-  padding: 0;
-  margin: 0;
-  box-sizing: border-box;
-  font-family: 'Poppins', sans-serif;
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+    font-family: 'Poppins', sans-serif;
 }
 
 body {
-  min-height: 100vh;
-  width: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  background-image: url(https://images.pexels.com/photos/325185/pexels-photo-325185.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940);
-  background-size: cover;
-  background-position: center;
-  position: relative;
+    min-height: 100vh;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background: #f4f4f4;
 }
 
-body::after {
-  content: "";
-  position: absolute;
-  top: 0;
-  left: 0;
-  height: 100%;
-  width: 100%;
-  background-color: rgba(0,0,0,0.8);
+header {
+    background: #333;
+    color: #fff;
+    width: 100%;
+    position: relative;
+}
+
+header nav {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 15px 50px;
+}
+
+.logo-container {
+    display: flex;
+    align-items: center;
+}
+
+.logo-image {
+    width: 50px;
+    height: 50px;
+    margin-right: 15px;
+}
+
+ul {
+    display: flex;
+    list-style: none;
+}
+
+ul li {
+    margin-left: 30px;
+}
+
+ul li a {
+    color: #fff;
+    text-decoration: none;
+    font-weight: 600;
+}
+
+.hero {
+    width: 100%;
+    height: 60vh;
+    position: relative;
 }
 
 section {
   position: relative;
   z-index: 3;
-  padding-top: 50px;
+  padding-top: 100px;
   padding-bottom: 50px;
 }
 
@@ -62,7 +95,7 @@ section {
 
 .row  {
   display: flex;
-  flwx-wrap: wrap;
+  flex-wrap: wrap;
   align-items: center;
   justify-content: space-between;
 }
@@ -94,7 +127,7 @@ section {
 }
 
 .contact-info-content h4 {
-  color: #ecac4bee;
+  color: #ecac4b;
   font-size: 1.4em;
   margin-bottom: 5px;
 }
@@ -158,7 +191,7 @@ section {
 .contact-form .input-box input[type="submit"]
 {
   width: 100%;
-  background:  #ecac4bee;
+  background:  #ecac4b;
   color: #FFF;
   border: none;
   cursor: pointer;
@@ -171,7 +204,7 @@ section {
 .contact-form .input-box input[type="submit"]:hover
 {
   background: #FFF;
-  color: #ecac4bee;
+  color: #ecac4b;
 }
 
 @media (max-width: 991px) {
@@ -193,4 +226,3 @@ section {
     width: 100%;
   }
 }
-
