--- a/features/services.css
+++ b/features/services.css
@@ -4,16 +4,30 @@ body {
     color: #333;
 }
 
-header {
-    background-color: #1f121d;
-    color: #f4f4f4;
-    padding: 20px 50px;
+
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap');
+
+* {
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+    font-family: 'Poppins', sans-serif;
 }
 
-nav {
+
+
+header {
+    background: #333;
+    color: #fff;
+    width: 100%;
+    position: relative;
+}
+
+header nav {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    padding: 15px 50px;
 }
 
 .logo-container {
@@ -22,32 +36,31 @@ nav {
 }
 
 .logo-image {
-    width: 40px;
-    height: 40px;
-    margin-right: 10px;
+    width: 50px;
+    height: 50px;
+    margin-right: 15px;
 }
 
-.logo-text {
-    font-size: 24px;
-    font-weight: bold;
-}
-
-nav ul {
-    list-style: none;
+ul {
     display: flex;
-    gap: 20px;
+    list-style: none;
 }
 
-nav ul li {
-    display: inline;
+ul li {
+    margin-left: 30px;
 }
 
-nav ul li a {
+ul li a {
     color: #fff;
     text-decoration: none;
-    font-weight: bold;
+    font-weight: 600;
 }
 
+.hero {
+    width: 100%;
+    height: 60vh;
+    position: relative;
+}
 #features {
     background-color: #f0ddc1ee;
     padding: 50px;
