--- a/homepage/homepage.css
+++ b/homepage/homepage.css
@@ -21,7 +21,7 @@ nav {
     justify-content: space-between;
     align-items: center;
     padding: 20px 50px;
-    background-color: black;
+    background-color: rgb(35, 16, 35);
 }
 
 .logo-container {
