--- a/homepage/homepage.css
+++ b/homepage/homepage.css
@@ -1,10 +1,11 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap');
+/* @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap'); */
+@import url('https://fonts.cdnfonts.com/css/satoshi');
 
 * {
     padding: 0;
     margin: 0;
     box-sizing: border-box;
-    font-family: 'Poppins', sans-serif;
+    font-family: 'Satoshi', sans-serif;
 }
 
 body {
@@ -95,6 +96,21 @@ ul li a {
     position: relative;
 }
 
+.readMore {
+    background-color: #3498db;
+    color: white;
+    border: none;
+    padding: 10px 20px;
+    border-radius: 5px;
+    font-size: 16px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+  }
+  
+  .readMore:hover {
+    background-color: #2980b9;
+  }  
+
 .slideshow-container {
     width: 100%;
     height: 100%;
@@ -144,7 +160,7 @@ ul li a {
 }
 
 section {
-    padding: 50px 20px;
+    padding: 20px;
     width: 100%;
 }
 
@@ -160,10 +176,34 @@ section {
     text-align: center;
 }
 
-.about-container {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
+.card {
+    height: 200px;
+}
+
+.feature-description h3, .section-container > h2 {
+    text-align: center;
+}
+
+/* #customer-testimonials .testimonal-slide {
+
+} */
+
+.feature-description > * {
+    padding: 10px;
+}
+
+.card > * {
+    width: 48%;
+    vertical-align: bottom;
+    background-color: #3498db;
+    border-radius: 5px;
+    display: inline-block;
+    height: 100%;
+}
+
+.about-cards {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
     gap: 20px;
 }
 
@@ -182,7 +222,6 @@ section {
     gap: 20px;
 }
 
-.about-card,
 .safety-feature,
 .location-feature,
 .emergency-feature,
@@ -214,7 +253,6 @@ section {
     margin-bottom: 20px;
 }
 
-.feature-description,
 .testimonial-description {
     text-align: left;
 }
@@ -316,9 +354,11 @@ footer {
 .section-container {
     width: 80%;
     margin: auto;
-    text-align: center;
 }
 
+.section-container > * {
+    margin: 10px 0;
+}
 /* Testimonial Slideshow Styles */
 .testimonial-slideshow-container {
     position: relative;
@@ -337,10 +377,6 @@ footer {
     align-items: center;
     justify-content: center;
     flex-direction: column;
-}
-
-.feature-description {
-    margin-top: 15px;
 }
 
 /* Navigation Arrows */
@@ -388,4 +424,10 @@ footer {
 
 .active, .dot:hover {
     background-color: #717171;
+}
+
+@media (max-width: 480px) {
+    .about-cards {
+        grid-template-columns: repeat(1, 1fr);
+    }
 }
