--- a/about/about.css
+++ b/about/about.css
@@ -1,11 +1,11 @@
 
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap');
+@import url('https://fonts.cdnfonts.com/css/satoshi');
 
 * {
     padding: 0;
     margin: 0;
     box-sizing: border-box;
-    font-family: 'Poppins', sans-serif;
+    font-family: 'Satoshi', sans-serif;
 }
 
 body {
@@ -108,7 +108,7 @@ nav ul li a {
 }
 
 #meet-our-team {
-    background-color: #ebc58dee;
+    background-color: #ddd;
     padding: 50px;
     text-align: center;
 }
