--- a/contact us/contact.css
+++ b/contact us/contact.css
@@ -1,19 +1,16 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap');
+@import url('https://fonts.cdnfonts.com/css/satoshi');
 
 * {
     padding: 0;
     margin: 0;
     box-sizing: border-box;
-    font-family: 'Poppins', sans-serif;
+    font-family: 'Satoshi', sans-serif;
 }
 
 body {
     min-height: 100vh;
-    width: 100%;
-    display: flex;
-    flex-direction: column;
     align-items: center;
-    background: #f4f4f4;
+    background: #ddd;
 }
 
 header {
@@ -65,7 +62,7 @@ ul li a {
 section {
   position: relative;
   z-index: 3;
-  padding-top: 100px;
+  padding-top: 20px;
   padding-bottom: 50px;
 }
 
@@ -78,7 +75,6 @@ section {
 }
 
 .section-header {
-  margin-bottom: 50px;
   text-align: center;
 }
 
@@ -89,19 +85,19 @@ section {
   margin-bottom: 20px;
 }
 
-.section-header p {
-  color: #FFF;
+.section-header h4 {
+  color: #696868;
+  width: 75%;
+  margin: 10px auto;
 }
 
 .row  {
-  display: flex;
-  flex-wrap: wrap;
-  align-items: center;
-  justify-content: space-between;
-}
-
-.contact-info {
-  width: 50%;
+  display: grid;
+  gap: 5px;
+  width: 80%;
+  margin: 10px auto;
+  padding: 10px 0;
+  grid-template-columns: repeat(2, 1fr);
 }
 
 .contact-info-item {
@@ -133,21 +129,20 @@ section {
 }
 
 .contact-info-content p {
-  color: #FFF;
+  color: #333;
   font-size: 1em;
 }
 
 .contact-form {
   background-color: #fff;
-  padding: 40px;
-  width: 45%;
-  padding-bottom: 20px;
-  padding-top: 20px;
+  border-radius: 10px;
+  padding: 14px;
 }
 
 .contact-form h2 {
   font-weight: bold;
-  font-size: 2em;
+  font-size: 1.5em;
+  text-align: center;
   margin-bottom: 10px;
   color: #333;
 }
@@ -188,10 +183,10 @@ section {
   transform: translateY(-20px);
 }
 
-.contact-form .input-box input[type="submit"]
-{
+.contact-form .input-box input[type="submit"] {
   width: 100%;
   background:  #ecac4b;
+  border-radius: 10px;
   color: #FFF;
   border: none;
   cursor: pointer;
@@ -207,22 +202,9 @@ section {
   color: #ecac4b;
 }
 
-@media (max-width: 991px) {
-  section {
-    padding-top: 50px;
-    padding-bottom: 50px;
-  }
+@media (max-width: 760px) {
   
   .row {
-    flex-direction: column;
-  }
-  
-  .contact-info {
-    margin-bottom: 40px;
-    width: 100%;
-  }
-  
-  .contact-form {
-    width: 100%;
+    grid-template-columns: repeat(1, 1fr);
   }
 }
