--- a/features/services.css
+++ b/features/services.css
@@ -1,16 +1,15 @@
+@import url('https://fonts.cdnfonts.com/css/satoshi');
+
 body {
     margin: 0;
-    font-family: Arial, sans-serif;
     color: #333;
 }
-
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap');
 
 * {
     padding: 0;
     margin: 0;
     box-sizing: border-box;
-    font-family: 'Poppins', sans-serif;
+    font-family: 'Satoshi', sans-serif;
 }
 
 header {
@@ -67,42 +66,6 @@ ul li a {
     transition: 0.4s;
 }
 
-@media (max-width: 768px) {
-    .menu-icon {
-        display: flex;
-    }
-    ul {
-        position: fixed;
-        top: 0;
-        right: -100%;
-        height: 100vh;
-        width: 200px;
-        background: #333;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
-        transition: 0.5s;
-    }
-    ul li {
-        margin: 20px 0;
-    }
-    ul li a {
-        font-size: 24px;
-    }
-    .menu-icon.active span:nth-child(1) {
-        transform: rotate(-45deg) translate(-5px, 6px);
-    }
-    .menu-icon.active span:nth-child(2) {
-        opacity: 0;
-    }
-    .menu-icon.active span:nth-child(3) {
-        transform: rotate(45deg) translate(-5px, -6px);
-    }
-    ul.active {
-        right: 0;
-    }
-}
-
 .hero {
     width: 100%;
     height: 60vh;
@@ -150,8 +113,8 @@ ul li a {
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     text-align: center;
     flex: 1;
-    max-width: 22%; /* Adjust to fit content */
-    min-width: 200px; /* Adjust as needed */
+    max-width: 22%;
+    min-width: 200px;
     position: relative;
 }
 
@@ -160,8 +123,10 @@ ul li a {
     color: #fff;
     font-size: 24px;
     font-weight: bold;
-    padding: 10px 20px;
-    border-radius: 50%;
+    padding: 15px;
+    border-radius: 60px;
+    width: 60px;
+    margin: auto;
     margin-bottom: 20px;
 }
 
@@ -184,24 +149,12 @@ ul li a {
 }
 
 .arrow::before {
-    content: "\2192"; /* Unicode arrow character */
+    content: "\2192";
+    /* Unicode arrow character */
     font-size: 24px;
     color: #f8b400;
     display: inline-block;
     margin: 0 10px;
-}
-
-@media (max-width: 768px) {
-    .features-steps {
-        flex-direction: column;
-        align-items: center;
-    }
-
-    .feature-step,
-    .arrow {
-        max-width: 100%;
-        margin: 10px 0;
-    }
 }
 
 #schedule-your-ride {
@@ -221,30 +174,24 @@ ul li a {
     color: #333;
 }
 
-#schedule-your-ride p {
-    font-size: 18px;
-    margin-bottom: 40px;
+#schedule-your-ride h4 {
+    margin-bottom: 25px;
     color: #666;
 }
 
 .schedule-content {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    flex-wrap: wrap;
+    display: grid;
+    width: 80%;
+    margin: auto;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 20px;
 }
 
 .schedule-content img {
-    max-width: 200px; /* Adjust the max-width as needed */
-    width: 100%;
-    height: auto;
-    margin-right: 20px;
+    width: auto;
+    height: 50vw;
 }
 
-.schedule-description {
-    flex: 1;
-    max-width: 500px; /* Limit the max width of the description to prevent it from being too wide */
-}
 
 .schedule-description h3 {
     font-size: 24px;
@@ -280,15 +227,10 @@ ul li a {
     background-color: #e5a200;
 }
 
-@media (max-width: 768px) {
-    .schedule-content {
-        flex-direction: column;
-        align-items: center;
-    }
-    
-    .schedule-content img {
-        margin: 0 0 10px 0; /* Adjust margins for better spacing on mobile */
-    }
+.schedule-description {
+    background-color: #ccc;
+    padding: 10px;
+    border-radius: 10px;
 }
 
 footer {
@@ -348,4 +290,67 @@ footer {
     text-align: center;
     padding: 10px;
     border-top: 1px solid #444;
+}
+
+
+
+@media (max-width: 768px) {
+    .features-steps {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .schedule-content {
+        width: 100%;
+        gap: 5px;
+    }
+
+    .feature-step,
+    .arrow {
+        max-width: 100%;
+        margin: 10px 0;
+    }
+
+    .menu-icon {
+        display: flex;
+    }
+
+    ul {
+        position: fixed;
+        top: 0;
+        right: -100%;
+        height: 100vh;
+        width: 200px;
+        background: #333;
+        flex-direction: column;
+        align-items: center;
+        z-index: 2;
+        justify-content: center;
+        transition: 0.5s;
+    }
+
+    ul li {
+        margin: 20px 0;
+    }
+
+    ul li a {
+        font-size: 24px;
+    }
+
+    .menu-icon.active span:nth-child(1) {
+        transform: rotate(-45deg) translate(-5px, 6px);
+    }
+
+    .menu-icon.active span:nth-child(2) {
+        opacity: 0;
+    }
+
+    .menu-icon.active span:nth-child(3) {
+        transform: rotate(45deg) translate(-5px, -6px);
+    }
+
+    ul.active {
+        right: 0;
+    }
+
 }
