--- a/homepage/homepage.css
+++ b/homepage/homepage.css
@@ -17,7 +17,7 @@ body {
 }
 
 header {
-    background: #333;
+    background:  #1b0a18;
     color: #fff;
     width: 100%;
     position: relative;
@@ -280,7 +280,7 @@ section {
 }
 
 footer {
-    background-color: #333;
+    background-color: #1b0a18;
     color: white;
     padding: 50px 0;
     text-align: center;
