--- a/about/about.css
+++ b/about/about.css
@@ -1,11 +1,10 @@
-
-@import url('https://fonts.cdnfonts.com/css/satoshi');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap');
 
 * {
     padding: 0;
     margin: 0;
     box-sizing: border-box;
-    font-family: 'Satoshi', sans-serif;
+    font-family: 'Poppins', sans-serif;
 }
 
 body {
@@ -17,21 +16,11 @@ body {
     background: #f4f4f4;
 }
 
-<<<<<<< HEAD
-header { 
-    background: rgb(34, 15, 37);
-    color: #f4f4f4;
-    text-align: center;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-=======
 header {
     background: #333;
     color: #fff;
     width: 100%;
     position: relative;
->>>>>>> 04aeffefb60c79613ce7beb510c76b1d2a4788c7
 }
 
 header nav {
@@ -66,7 +55,42 @@ ul li a {
     text-decoration: none;
     font-weight: 600;
 }
-
+@media (max-width: 768px) {
+    .menu-icon {
+        display: flex;
+    }
+    ul {
+        position: fixed;
+        top: 0;
+        right: -100%;
+        height: 100vh;
+        width: 200px;
+        background: #333;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        transition: 0.5s;
+    }
+    ul li {
+        margin: 20px 0;
+    }
+    ul li a {
+        font-size: 24px;
+    }
+    .menu-icon.active span:nth-child(1) {
+        transform: rotate(-45deg) translate(-5px, 6px);
+    }
+    .menu-icon.active span:nth-child(2) {
+        opacity: 0;
+    }
+    .menu-icon.active span:nth-child(3) {
+        transform: rotate(45deg) translate(-5px, -6px);
+    }
+    ul.active {
+        right: 0;
+    }
+  }
+  
 .hero {
     width: 100%;
     height: 60vh;
@@ -118,7 +142,7 @@ nav ul li a {
 }
 
 #meet-our-team {
-    background-color: #ddd;
+    background-color: #ebc58dee;
     padding: 50px;
     text-align: center;
 }
