--- a/register/register.css
+++ b/register/register.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.cdnfonts.com/css/satoshi');
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700;800&display=swap");
 
 *,
 *::before,
@@ -10,14 +10,15 @@
 
 body,
 input {
-  font-family: "Satoshi", sans-serif;
+  font-family: "Poppins", sans-serif;
 }
 
 main {
   width: 100%;
+  min-height: 100vh;
   overflow: hidden;
-  background-color: #333;
-  padding: 4rem;
+  background-color: #1b0a18;
+  padding: 2rem;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -26,7 +27,8 @@ main {
 .box {
   position: relative;
   width: 100%;
-  height: 560px;
+  max-width: 1020px;
+  height: 640px;
   background-color: #fff;
   border-radius: 3.3rem;
   box-shadow: 0 60px 40px -30px rgba(0, 0, 0, 0.27);
@@ -89,13 +91,13 @@ form.sign-up-form {
 }
 
 .heading h2 {
-  font-size: 2rem;
+  font-size: 2.1rem;
   font-weight: 600;
   color: #151111;
 }
 
 .heading h6 {
-  color: #666;
+  color: #bababa;
   font-weight: 400;
   font-size: 0.75rem;
   display: inline;
@@ -129,7 +131,7 @@ form.sign-up-form {
   border-bottom: 1px solid #bbb;
   padding: 0;
   font-size: 0.95rem;
-  color: #222;
+  color: #151111;
   transition: 0.4s;
 }
 
@@ -139,7 +141,7 @@ label {
   top: 50%;
   transform: translateY(-50%);
   font-size: 0.95rem;
-  color: #333;
+  color: #bbb;
   pointer-events: none;
   transition: 0.4s;
 }
@@ -168,17 +170,16 @@ label {
 }
 
 .sign-btn:hover {
-  background-color:  #ddd;
-  color: #222;
+  background-color:  #f2dbb8ee;
 }
 
 .text {
-  color: #333;
+  color: #bbb;
   font-size: 0.7rem;
 }
 
 .text a {
-  color: #333;
+  color: #bbb;
   transition: 0.3s;
 }
 
