--- a/about/about.css
+++ b/about/about.css
@@ -17,7 +17,7 @@ body {
 }
 
 header {
-    background: #333;
+    background: #1b0a18;
     color: #fff;
     width: 100%;
     position: relative;
