--- a/features/services.css
+++ b/features/services.css
@@ -13,7 +13,7 @@ body {
 }
 
 header {
-    background: #333;
+    background: #1b0a18;
     color: #fff;
     width: 100%;
     position: relative;
