--- a/homepage/homepage.css
+++ b/homepage/homepage.css
@@ -69,26 +69,6 @@ ul li a {
     margin: 4px 0;
 }
 
-@media (max-width: 768px) {
-    ul {
-        display: none;
-        flex-direction: column;
-        width: 100%;
-    }
-
-    ul.active {
-        display: flex;
-    }
-
-    nav {
-        flex-direction: column;
-    }
-
-    .menu-toggle {
-        display: flex;
-    }
-}
-
 .hero {
     width: 100%;
     height: 60vh;
@@ -99,6 +79,7 @@ ul li a {
     background-color: #3498db;
     color: white;
     border: none;
+    margin-top: 14px;
     padding: 10px 20px;
     border-radius: 5px;
     font-size: 16px;
@@ -176,7 +157,12 @@ section {
 }
 
 .card {
-    height: 200px;
+    position: relative;
+    height: 250px;
+}
+
+.card h3 {
+    padding: 15px;
 }
 
 .feature-description h3, .section-container > h2 {
@@ -198,6 +184,7 @@ section {
     vertical-align: bottom;
     background-color: #3498db;
     border-radius: 5px;
+    object-fit:cover;
     display: inline-block;
     height: 100%;
 }
@@ -383,55 +370,58 @@ footer {
     background-color: #ddd;
 }
 
-/* Navigation Arrows */
-/* .prev, .next {
-    cursor: pointer;
-    position: absolute;
-    top: 50%;
-    width: auto;
-    padding: 16px;
-    margin-top: -22px;
-    color: white;
-    font-weight: bold;
-    font-size: 18px;
-    transition: 0.6s ease;
-    border-radius: 0 3px 3px 0;
-    user-select: none;
-}
-
-.next {
-    right: 0;
-    border-radius: 3px 0 0 3px;
-}
-
-.prev:hover, .next:hover {
-    background-color: rgba(0,0,0,0.8);
-} */
-
-/* Dots */
-/* .navigation-dots {
-    text-align: center;
-    padding: 15px;
-    background: #f1f1f1;
-}
-
-.dot {
-    cursor: pointer;
-    height: 15px;
-    width: 15px;
-    margin: 0 2px;
-    background-color: #bbb;
-    border-radius: 50%;
-    display: inline-block;
-    transition: background-color 0.6s ease;
-}
-
-.active, .dot:hover {
-    background-color: #717171;
-} */
-
 @media (max-width: 480px) {
     .about-cards {
         grid-template-columns: repeat(1, 1fr);
+    }
+
+    .card > * {
+        width: 100%;
+    }
+    .card h3 {
+        padding: 4px;
+    }
+    .card {
+        height: 300px;
+    }
+
+    .card > div {
+        position: absolute;
+        top: 50%;
+        left: 0;
+        height: 50%;
+    }
+}
+
+@media (max-width: 768px) {
+    #safety-features .section-container {
+        width: 95%;
+    }
+
+    #customer-testimonials .slideshow-container {
+        grid-template-columns: repeat(1, 1fr);
+        gap: 50px;
+    }
+
+    #customer-testimonials .section-container {
+        width: 95%;
+    }
+
+    ul {
+        display: none;
+        flex-direction: column;
+        width: 100%;
+    }
+
+    ul.active {
+        display: flex;
+    }
+
+    nav {
+        flex-direction: column;
+    }
+
+    .menu-toggle {
+        display: flex;
     }
 }
